fixed html code

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 </head>
 <body>
 	<div class="wrapper">
-		<h1>Never Ending Story</h1>
-		<p>Lorem ipsum Pariatur mollit ex cillum sint occaecat cillum dolor adipisicing exercitation ut incididunt officia dolore sed ad reprehenderit fugiat exercitation in magna reprehenderit dolore cupidatat sed proident magna.</p>
+		<h1></h1>
+		<p></p>
 	</div>
 
-	<button class="btn">Button 1</button>
-	<button class="btn">Button 2</button>
-	<button class="btn">Button 3</button>
+	<button id="button1" class="btn">Button 1</button>
+	<button id="button2" class="btn">Button 2</button>
+	<button id="button3" class="btn">Button 3</button>
 
+	
 </body>
 </html>
