new html changes

--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 </head>
 <body>
 	<div class="wrapper">
-		<h1></h1>
-		<p></p>
+		<h1 class="header"></h1>
+		<p class="story"></p>
+
+		<button id="button1" class="btn">Button 1</button>
+		<button id="button2" class="btn">Button 2</button>
+		<button id="button3" class="btn">Button 3</button>
 	</div>
 
-	<button id="button1" class="btn">Button 1</button>
-	<button id="button2" class="btn">Button 2</button>
-	<button id="button3" class="btn">Button 3</button>
-
-	
 </body>
 </html>
