--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 		<button id="button3" class="btn">Button 3</button>
 	</div>
 
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+	<script type="text/javascript" src="script.js"></script>
+
 </body>
 </html>
