--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Once Upon a Time</title>
+	<title>Once Upon a Boy</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
