added score h2 plus class.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <html>
 <head>
-	<title>Once Upon a Boy</title>
+	<title>Once Upon a Time</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 	<div class="wrapper">
 		<h1 class="header"></h1>
+		<h2 class="score">SCORE <span class="score-var"></span></h2>
 		<p class="story"></p>
 
 		<button id="button1" class="btn">Button 1</button>
