--- a/index.html
+++ b/index.html
@@ -6,20 +6,18 @@
 <body>
 	<div class="wrapper">
 		<h1 class="header"></h1>
-		<h2 class="score">SCORE <span class="score-var"></span></h2>
+		<h2 class="score">SCORE <span class="score-var" id="show-score"></span></h2>
+		<div class="vote">
+      
+      <button id="up-button" class="btn">&#8593</button>
+      <button id="down-button" class="btn">&#8595</button>
+    </div>
 		<p class="story"></p>
 
 		<button id="button1" class="btn">Button 1</button>
 		<button id="button2" class="btn">Button 2</button>
 		<button id="button3" class="btn">Button 3</button>
-		<div class="vote">
-      <h2>
-				<span class="score">Score</span>
-				<span id="show-score" class="score">0</span>
-			</h2>
-      <button id="up-button" class="btn">&#8593</button>
-      <button id="down-button" class="btn">&#8595</button>
-    </div>
+		
 	</div>
 
 	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
