--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <html>
+
 <head>
-	<title>Once Upon a Time</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+    <title>Once Upon a Time</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+
 <body>
-	<div class="wrapper">
-		<h1 class="header"></h1>
-		<h2 class="score">SCORE <span class="score-var" id="show-score"></span></h2>
-		<div class="vote">
-      
-      <button id="up-button" class="btn">&#8593</button>
-      <button id="down-button" class="btn">&#8595</button>
+    <div class="wrapper">
+        <h1 class="header"></h1>
+        <h2 class="score">SCORE <span class="score-var" id="show-score"></span></h2>
+        <div class="vote">
+            <button id="up-button" class="btn">&#8593</button>
+            <button id="down-button" class="btn">&#8595</button>
+        </div>
+        <p class="story"></p>
+        <div id="button-container">
+            <button id="button1" class="btn">Button 1</button>
+            <button id="button2" class="btn">Button 2</button>
+            <button id="button3" class="btn">Button 3</button>
+        </div>
     </div>
-		<p class="story"></p>
-
-		<button id="button1" class="btn">Button 1</button>
-		<button id="button2" class="btn">Button 2</button>
-		<button id="button3" class="btn">Button 3</button>
-		
-	</div>
-
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-	<script type="text/javascript" src="script.js"></script>
-
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script type="text/javascript" src="script.js"></script>
 </body>
+
 </html>
